<resources>
    <string name="app_name">Waybil</string>
    <string name="email_login">Correo Electrónico</string>
    <string name="password_login">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="sign_up_button">Regístrate</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="no_account">Crear cuenta nueva</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customers_string">Clientes</string>
    <string name="find_customers">Buscar clientes</string>
    <string name="account_details">Perfil</string>
    <string name="bank_details">Informacion Bancaria</string>
    <string name="sku">SKU#:</string>
    <string name="stock">Stock:</string>
    <string name="details">Detalles:</string>
    <string name="save">Guardar</string>
    <string name="location">Ubicación:</string>
    <string name="history">Historial</string>
    <string name="upload_successful">Subida exitosa</string>
    <string name="error_image_capture">Error capturando imagen</string>
    <string name="time">Hora:</string>
    <string name="order_total">Total:</string>
    <string name="total">Total</string>
    <string name="total_colon">Total:</string>
<!--    <string name="number_of_stores">Number of stores</string>-->
    <string name="customer">Cliente:</string>
    <string name="order_details">Detalles del pedido</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="manage_settings">Configuración</string>
    <string name="delivery">Entrega a negocio</string>
    <string name="for_pickup">Para recolectar</string>
    <string name="deliver">Entregar</string>
    <string name="success">Éxito</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="incorrect_pin">Clave incorrecta</string>
    <string name="no_changes_were_made">Ningún cambio fue hecho</string>
    <string name="confirm_delete_query">¿Está seguro que quiere eliminar este producto?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="complete_fields_suggestion">Por favor llene los espacios de arriba</string>
    <string name="delete_user_failed">No se pudo eliminar el usuario</string>
    <string name="update_success">Actualización exitosa</string>
    <string name="profile_unsaved_changes">Tiene cambios sin guardar.
        Presione descartar para continuar e ignorar cambios. Presione cerrar para cerrar este mensaje</string>
    <string name="discard_changes">Descartar cambios</string>
    <string name="close_message">Cerrar</string>
    <string name="remove_profile_image_query">¿Estaá seguro que quiere eliminar la foto de perfil?</string>
    <string name="choose_one">Escoja </string>
    <string name="waybil_customer_app">Waybil app para clientes</string>
    <string name="share_buyerside_message">Aquí está la app de Waybil para compradores</string>
    <string name="is_this_your_location">¿Está seguro que esta es la ubicación de su negocio?</string>
    <string name="enter_email_address">Ingresa tu correo electrónico</string>
    <string name="enter_password">Ingresa contraseña</string>
    <string name="user_does_not_exist">El usuario no existe</string>
    <string name="reset_instructions_sent">Se ha enviado instrucciones para restablecer contraseña</string>
    <string name="signup_successful">Registro exitoso</string>
    <string name="signup_failed">Registro fallido</string>



    <!-- Notifcation channel info below -->

    <string name="channel_name">ORDERS_CHANNEL</string>
    <string name="channel_description">order notification channel </string>
    <string name="summary">Resumen</string>
    <string name="transactions">Transacciones</string>
    <string name="orders_made">Pedidos Hechos</string>
    <string name="money_spent">Monto gastado</string>
    <string name="recent_order">Último Pedido</string>
    <string name="no_data_to_show">No hay datos para mostrar</string>
    <string name="orders">Pedidos</string>
    <string name="inventory">Inventario</string>
    <string name="visibility_home_warning">No está visible - comprobar configuración</string>
    <string name="search_for_product">Buscar productos</string>
    <string name="no_location_warning">No se puede continuar sin su ubicación</string>
    <string name="location_permission_query">¿Quieres permitir que Waybil acceda a la ubicación de este dispositivo?</string>




    <!--  Add product strings  -->
    <string name="enter_product_name">Ingrese nombre del producto</string>
    <string name="enter_brand_name">Ingrese marca del producto</string>
    <string name="enter_sku_number">Ingrese numero de SKU</string>
    <string name="enter_category">Ingrese la categoría</string>
    <string name="enter_unit_of_measurement">Ingrese unidad de medida</string>
    <string name="enter_size_per_unit">Ingrese tamaño</string>
    <string name="enter_quantity_per_unit">Ingrese cantidad</string>
    <string name="enter_price">Ingrese precio</string>
    <string name="enter_inventory_quantity">Ingrese cantidad en existencia</string>
    <string name="enter_type">Ingrese tipo</string>
    <string name="upload_image">Subir imagen</string>
    <string name="image_access_denied">Autorización para acceder galería de fotos es necesario</string>
    <string name="add_product">Agregar Producto</string>
    <string name="product_name">Nombre de producto</string>
    <string name="product_brand">Marca</string>
    <string name="product_sku">Código de referencia</string>
    <string name="sku_hint_text">ej. SKU142657</string>
    <string name="product_category">Categoría</string>
    <string name="product_category_hint">Ej. bebidas, comida, limpieza...</string>
    <string name="product_type">Tipo</string>
    <string name="product_type_hint">Ej. gasiosas, agua, papalinas...</string>
    <string name="product_description">Descripción</string>
    <string name="product_metric">Unidad de medida</string>
    <string name="product_size">Tamaño</string>
    <string name="product_bulk_quantity">Cantidad</string>
    <string name="product_metric_hint">ej. ml</string>
    <string name="product_size_hint">ej. 500</string>
    <string name="bulk_quantity_hint">ej. 12</string>
    <string name="product_price">Precio</string>
    <string name="product_price_hint">ej. 69.99</string>
    <string name="product_inventory_available">Unidades en existencia</string>
    <string name="product_available_hint">ej. 64</string>
    <string name="search_for_image">Buscar Imagen</string>
    <string name="capture_image">Tomar Foto</string>
    <string name="sku_exists">Existe un producto con el SKU ingresado</string>
    <string name="error">Error</string>
    <string name="permission_required">Permiso requerido</string>
    <string name="permission_granted">Permiso concedido</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="location_rationale_message">Dar acceso a su ubicación permite que la aplicación encuentre su negocio</string>


    <!--  signup strings  -->
    <string name="enter_accntManager_name">Ingrese nombre del administrador</string>
    <string name="enter_business_name">Ingrese nombre de negocio</string>
    <string name="enter_phone_number">Ingrese numero de teléfono</string>
    <string name="enter_business_address">Ingrese dirección de negocio</string>
    <string name="enter_password_confirmation">Confirme contraseña</string>
    <string name="password_match_warning">Contraseñas no coinciden</string>
    <string name="error_logging_into_account">Error al ingresar a la cuenta</string>
    <string name="register">Registrar</string>
    <string name="business_name">Nombre de negocio</string>
    <string name="business_name_hint">Distribuidor ejemplo...</string>
    <string name="account_adminstrator">Adminstrador de cuenta</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="first_name_hint">Ej. Ricardo</string>
    <string name="surname_hint">Ej. Arjona</string>
    <string name="phone_number">Número de telefono</string>
    <string name="phone_number_hint">00000000</string>
    <string name="address">Dirección</string>
    <string name="address_hint">Dirección</string>
    <string name="delivery_range">Distancia maxima para entrega (km)</string>
    <string name="invite_client">Invitar Cliente</string>
    <string name="logout">Cerrar sesión</string>
    <string name="confirm_emailPassword_deleteUser">Ingrese correo electrónico y contraseña para borrar cuenta</string>
    <string name="email_hint">ejemplo@ejemplo.com</string>
    <string name="delete_account">Borrar Cuenta</string>
    <string name="client_colon">Cliente:</string>
    <string name="location_colon">Ubicación:</string>
    <string name="date_colon">Fecha:</string>
    <string name="type_colon">Tipo:</string>
    <string name="delivery_estimate_header">Fecha de entrega:</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="delivery_fee">Costo de envío</string>
    <string name="directions">Direcciones</string>
    <string name="reject">Rechazar</string>
    <string name="call_customer">Llamar cliente</string>
    <string name="choose_location">Elegir ubicación</string>
    <string name="jan">Ene</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Abr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Ago</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dic</string>
    <string name="monthly_total">Total del mes</string>
    <string name="invoice_no_colon">No. de pedido:</string>
    <string name="order_date_colon">Fecha del pedido:</string>
    <string name="change">Cambiar</string>
    <string name="delete">Eliminar</string>
    <string name="add_profileimage_suggestion">Agrega foto de perfil para que te reconozcan</string>
    <string name="businesses">Negocios</string>
    <string name="delivery_time_profile">Tiempo de entrega (Días)</string>
    <string name="visibility">Visibilidad</string>
    <string name="invite_client_privateList">Invitar cliente a lista de clientes exclusiva</string>
    <string name="share_waybil_buyers">Compartir App de compradores</string>
    <string name="share">Compartir</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="details_colon">Detalles:</string>
    <string name="available_colon">Disponible:</string>
    <string name="edit_product">Editar producto</string>
    <string name="currency_edit_product">Quetzales</string>
    <string name="available">Disponible</string>
    <string name="pending">Pendiente</string>
    <string name="confirmed">Confirmado</string>
    <string name="delivered">Entregado</string>
    <string name="error_loading_orders">Error cargando pedidos</string>
    <string name="no_orders_to_display">No hay pedidos</string>
    <string name="geopoint_instructions">Asegúrese de que esta sea la ubicación de su negocio</string>
    <string name="find_your_business_location">Encuentre la ubicación de su negocio</string>
    <string name="share_location">Compartir Ubicación</string>
    <string name="distributor_colon">Vendedor:</string>
    <string name="pin_order_instructions">Ingrese el pin (disponible en la app del cliente) para completar el pedido</string>
    <string name="price_quetzales_header">Precio por unidad (Quetzales)</string>
    <string name="unit_description">Unidad/Descripción</string>


</resources>
