<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundedfragment_shape"
        tools:context=".view.inventory.AddProductInventory">

        <ImageView
            android:id="@+id/close_fragment_addProduct"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/add_product_header"
            style="@style/FragmentHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_signup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_product_header"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/linear_layout_addProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/product_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/product_name_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/product_name_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/enter_product_name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/brand_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/brand_name_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_brand"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/brand_name_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/enter_brand_name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sku_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/sku_number_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_sku"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/sku_id_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/sku_hint_text"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/category_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_category"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/category_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/product_category_hint"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/type_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_type"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/type_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/product_type_hint"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/unit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/unit_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_description"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/unit_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="ej. 50g x 10, un carton, una docena"
                        android:inputType="text"
                        android:maxLength="30"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/salePrice_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/salePrice_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_quetzales_header"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/salePrice_add"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/product_price_hint"
                        android:inputType="numberDecimal"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/quantity_available_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/quantity_available_header"
                        style="@style/DarkFontItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_inventory_available"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_available"
                        style="@style/DarkFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/information_fields_dark"
                        android:ems="10"
                        android:hint="@string/product_available_hint"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/add_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/information_fields_dark"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pic_preview"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/browse_images"
                            style="@style/DarkFontItalic"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/information_fields_dark"
                            android:gravity="center"
                            android:text="@string/search_for_image"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginHorizontal="15dp"
                            android:background="@drawable/dark_button"
                            android:gravity="center" />


                        <TextView
                            android:id="@+id/capture_image"
                            style="@style/DarkFontItalic"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/information_fields_dark"
                            android:gravity="center"
                            android:text="@string/capture_image"
                            android:textSize="16sp" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/cancel_newProduct"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/light_button"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textAppearance="@style/DarkFont"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/save_newProduct"
                        style="@style/WhiteFont"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/dark_button"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textAppearance="@style/WhiteFont"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar_add_product"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>